--- a/front-end/src/styles/globals.css
+++ b/front-end/src/styles/globals.css
@@ -8,7 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -18,12 +18,41 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rbg(var(--background-start-rgb))
+}
+
+@layer base {
+  h1, h2, h3 ,h4, h5, h6 {
+    @apply font-bold text-center leading-tight;
+  }
+  h2 {
+    @apply text-[2rem];
+  }
+  h3 {
+    @apply text-[1.5rem];
+  }
+  p, li, a {
+    @apply text-[1rem] text-justify;
+  }
+  label {
+    @apply font-display font-bold;
+  }
+  section {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    &.s-padding {
+      padding: 60px 15vw;
+    }
+    &.s-shadow {
+      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    }
+  }
+  button {
+    @apply flex py-[8px] px-[16px] bg-gradient-to-b from-emerald-300 to-green-500 border-[2px] border-slate-900/50 text-white font-bold rounded-full;
+  
+  }
 }
 
 @layer utilities {
